--- a/tour.html
+++ b/tour.html
@@ -11,7 +11,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" >
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
@@ -23,7 +22,7 @@
     <![endif]-->
 </head>
 <body>
-    <div class="brand"><img src="images/tuxedo.png" alt="Tuxedo logo"></div>
+    <div class="brand"><img src="images/tuxedo.png" alt="tuxedo logo"></div>
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -59,82 +58,75 @@
         </div>
         <!-- /.container -->
     </nav>
-
     <div class="container">
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Follow
-                        <strong>Tuxedo</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">Upcoming Shows</h2>
                     <hr>
                 </div>
-                <div class="col-lg-12">
-                 <p class="follow"> 
-                     <i class="fa fa-instagram"><a href="https://www.instagram.com/tuxedo/"> Follow</a></i> 
-                     <i class="fa fa-facebook"><a href="https://www.facebook.com/tuxedo/"> Follow</a></i> 
-                     <i class="fa fa-soundcloud"><a href="https://soundcloud.com/tuxedofunk"> Listen</a></i> 
-                     <i class="fa fa-twitter"><a href="https://twitter.com/Tuxedo"> Follow</a></i> 
-                     <i class="fa fa-youtube"> <a href="https://www.youtube.com/channel/UCkKZ6hhB4dyHh7wGQ_fKYdw">Subscribe</a></i>
-                 </p>
+                <div class="col-md-6">
+                    <img class="img-responsive img-border-left" src="http://cityhub.movoto.com/1459257834888_willow-glen-san-jose-an-inescapable-lure-featured.jpg" alt="San Jose">
+                </div>
+                <div class="col-md-6">
+                    <h2>Come see Tuxedo live<br>Febuary 2, 2017<br>Continental Bar<br>San Jose, CA</h2>
+                    <a href="https://www.eventbrite.com/e/tuxedo-dj-set-at-the-changing-same-2-year-tickets-30106391026" class="btn btn-default btn-lg">Get Tickets</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
-    </div>
+        </div>
+
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Contact
-                        <strong>Tuxedo</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">Tuxedo on Tour!</h2>
                     <hr>
-                    <div class="col-lg-12 text-center">
-                            <p>*Required Fields</p>
-                            </div>
-                    <form role="form">
-                        <div class="row">
-                            <div class="form-group col-lg-4">
-                                <label>Name*</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Address*</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label>City*</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-sm-1">
-                                <label>State*</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-sm-2">
-                                <label>Zip/Postal Code*</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-sm-5">
-                                <label>Email Address*</label>
-                                <input type="email" class="form-control">
-                            </div>
-                            <div class="form-group col-sm-3">
-                                <label>Phone Number*</label>
-                                <input type="tel" class="form-control">
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="form-group col-lg-12">
-                                <label>Message*</label>
-                                <textarea class="form-control" rows="6"></textarea>
-                            </div>
-                            <div class="form-group col-lg-12">
-                                <input type="hidden" name="save" value="contact">
-                                <a class="btn btn-default text-center" href="contact2.html">Submit</a>
-                            </div>
-                        </div>
-                    </form>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/winnipeg.jpg" alt="Wiinipeg, Canada">
+                    <h3>June 16, 2016<br>Winnipeg, MB<br>Union Sound<br></h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/vegas.jpg" alt="Las Vegas, NV">
+                    <h3>June 27, 2016<br>Las Vegas, NV<br>Bunkhouse saloon</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/la.jpg" alt="Los Angeles, California">
+                    <h3>June 28, 2016<br>Los Angeles, CA<br>Hollywood Bowl</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/sanfran.jpg" alt="San Francisco, California">
+                    <h3>June 30, 2016<br>San Francisco, CA<br>Bimbo's</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/portland.jpg" alt="Portland, Oregon">
+                    <h3>July 1, 2016<br>Portland, OR<br>Wonder Ballroom</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/seattle.jpg" alt="Seattle, Washington">
+                    <h3>July 2, 2016<br>Seattle, WA<br>The Crocodile</h3>
+                </div>
+                    <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/vancouver.webp" alt="Vancouver, BC, Canada">
+                    <h3>July 3, 2016<br>Vancouver, BC<br>The Alexander</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/dc.jpg" alt="Washington, D.C.">
+                    <h3>July 17, 2016<br>Wahington, D.C.<br>U Street Music Hall</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/philly.jpg" alt="Philadelphia, Pennsylvania">
+                    <h3>July 18, 2016<br>Philadelphia, PA<br>The Dolphin</h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/nyc.jpg" alt="">
+                    <h3>July 20, 2016<br>New York, NY<br>LPR</h3>
+                </div>
+                    <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="images/boston.jpg" alt="">
+                    <h3>July 21, 2016<br>Boston, MA<br>Boston City Hall Plaza</h3>
                 </div>
             </div>
         </div>
@@ -143,7 +135,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 ">
+                <div class="col-lg-12 text-center">
                     <p>**Francis Tuttle 2017 for educational purposes only**<br>**Artist information courtesy of Wikipedia and Spotify**</p>
                 </div>
             </div>
